--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "seed": "node prisma/seed.js",
     "start": "node index.js",
-    "start:dev": "nodemon index.js"
+    "start:dev": "nodemon index.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run start:dev\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "concurrently": "^8.2.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.4",
     "supertest": "^7.0.0"
